# sos-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DIAGNOSTIC_REPORT.md  EXECUTION_SUMMARY.md  GEMINI.md  INSTALL.cz.md  INSTALL.md  MULTIMODEL_SETUP.md  README.cz.md  README.md  SECURITY.md  TEST_PLAN_JULES.md  install.sh  pyproject.toml  renovate.json  sos-launcher.sh  test_gemini_action.py  todo-jules.md
.claude/: CLAUDE.md
.github/: CODEOWNERS  dependabot.yml
.github/commands/: gemini-invoke.toml  gemini-review.toml  gemini-scheduled-triage.toml  gemini-triage.toml
.github/workflows/: ci.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  security.yml
config/: default.yaml  emergency.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GEMINI_API_POLICIES.cz.md  GEMINI_API_POLICIES.md  REPOSITORY_RULES.cz.md  REPOSITORY_RULES.md
scripts/: use-local-sos.sh
src/: __init__.py  cli.py  setup_wizard.py
src/agent/: __init__.py  agentapi_client.py  claude_sdk_client.py  client.py  config.py  gemini_client.py  inception_client.py  openai_client.py  permissions.py  privilege.py
src/gcloud/: __init__.py  manager.py
src/session/: store.py
src/tools/: __init__.py  log_analyzer.py  mcp_server.py
src/tui/: app.py  styles.css
tests/: conftest.py  test_cli.py  test_setup_wizard.py
tests/e2e/: test_ai_consistency.py  test_cli_parsing.py  test_diagnose_e2e.py  test_diagnostics_scenarios.py  test_fixer_safety_logic.py  test_full_flow.py  test_hallucinations.py  (+2 more)
(+24 files in other folders)
