[project]
name = "sos-agent"
version = "0.1.0"
description = "System Rescue & Optimization Agent powered by Claude"
authors = [
    {name = "milhy777"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk (>=0.1.10,<0.2.0)",
    "asyncclick (>=8.3.0.7,<9.0.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "psutil (>=7.1.3,<8.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "google-generativeai (>=0.8.0,<1.0.0)",
    "openai (>=1.59.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[project.scripts]
sos = "src.cli:main"

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=5.0.0,<6.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.7,<0.15.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)"
]
